# ad_robot_cli_tool

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/ad_robot/: __init__.py  cli.py  downloader.py  models.py  stats.py
tests/: test_cli.py  test_stats.py
