[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ad-robot-speed-measurer"
version = "0.1.0"
description = "A typed CLI utility for measuring sequential download speed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ad-robot-speed = "ad_robot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ad_robot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
